--- a/Index.css
+++ b/Index.css
@@ -40,6 +40,79 @@ body {
     transition: color 0.3s ease;
   }
   
+
+  main {
+    text-align: center;
+    padding: 30px;
+  }
+  
+  main h1 {
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+    color: #333;
+  }
+  
+  main h1 span {
+    color: #4caf50;
+  }
+  
+  main p {
+    font-size: 1.2rem;
+    color: #555;
+    margin-bottom: 30px;
+  }
+  
+  .cards {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+  }
+  
+
+ .card {
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+  width: 250px;
+  height: 280px;
+  border: 1px solid #ddd; 
+  border-radius: 10px;
+  overflow: hidden;
+  background: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.card img {
+  width: calc(100% - 20px);
+  height: 200px;
+  object-fit: cover;
+  border-radius: 8px;
+  transition: transform 0.3s ease;
+  margin-bottom: 10px;
+}
+
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); 
+}
+
+.card p {
+  margin: 0; 
+  padding: 5px 10px;
+  font-size: 1rem;
+  color: #7FA1C3;
+  text-align: center;
+  font-weight: bold;
+  background-color: #f9f9f9;
+  border-radius: 5px;
+}
+
+  
+
   @media (max-width: 768px) {
     .navbar {
       flex-wrap: wrap; 
